--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,7 +27,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint pylint-exit
           pylint --generate-rcfile > .pylintrc
-          echo "disable=R0913, C0103" >> .pylintrc # Ignore R0913  Too many arguments, C0103 Ignore snake_case
+          echo "disable=R0913, C0103, R1705" >> .pylintrc # Ignore R0913  
+          # Too many arguments, C0103 Ignore snake_case, R1705 i can't fix it
       - name: Pylint
         run: |
           pylint --rcfile=.pylintrc --recursive=y --output-format=text mariadb_sqlbuilder
