--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,9 +9,9 @@ name: testing
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 permissions:
   contents: read
