--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint pylint-exit mariadb
+          pip install pylint pylint-exit
           pylint --generate-rcfile > .pylintrc
-          echo "disable=R0913, C0103, R1705, R0903, W0613, R0904, R0801" >> .pylintrc 
+          echo "disable=R0913, C0103, R1705, R0903, W0613, R0904, R0801, E0401" >> .pylintrc 
           # Ignore R0913 Too many arguments
           # C0103 Ignore snake_case
           # R1705 i can't fix it
@@ -41,6 +41,7 @@ jobs:
           # but i'd rather have it implemented than have to work it in at great expense
           # R0904 sql has many options so it need more then 20
           # R0801 similar lines
+          # E0401 Github can't install mariadb as a pip package
       - name: Pylint
         run: |
           pylint --rcfile=.pylintrc --recursive=y --output-format=text mariadb_sqlbuilder
