--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,10 +14,4 @@ build:
 
 # Optionally declare the Python requirements required to build your docs
 python:
-  install:
-    - requirements: requirements.txt
-    
-# Skip the installation of dependencies during build
-# since mariadb-connector-c is not available on PyPI
-install:
-  - skip: true
+  install: []
